--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -104,6 +104,7 @@
               <a href="/users/<%=listing.user.username%>"><%=listing.user.username%></a> on
               <%=listing.date_posted.toLocaleString()%>
             </h5>
+            <img class="index-listing-img" src="<%=listing.listing_image_url%>" alt="" />
             <p>Category: <%=listing.category%></p>
             <p>Distance away: <%=listing.distance_away%> km</p>
             <p>Expiry date: <%=listing.expiry_date.toDateString() %></p>
