--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -17,6 +17,7 @@
 
           <div class="mb-5 listing">
             <h4><%=listing.listing_name%></h4>
+            <h5 class="status"><%=listing.status%></h5>
             <h5>Posted on <%=listing.date_posted.toLocaleString()%></h5>
             <img class="profile-listing-img" src="<%=listing.listing_image_url%>" alt="" />
             <p>Category: <%=listing.category%></p>
