--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -37,6 +37,15 @@
           </div>
 
           <div class="mb-3 justify-center">
+            <label for="status" class="form-label ps-0">Status</label>
+            <select name="status" id="statusOptions">
+              <option value="available">Available</option>
+              <option value="reserved">Reserved</option>
+              <option value="taken">Taken</option>
+            </select>
+          </div>
+
+          <div class="mb-3 justify-center">
             <label for="description" class="form-label ps-0">Description (optional)</label>
             <textarea
               class="form-control"
