--- a/views/pages/chat.ejs
+++ b/views/pages/chat.ejs
@@ -14,7 +14,7 @@
         <div id="output"></div>
         <div id="feedback"></div>
       </div>
-      <input id="handle" type="text" placeholder="Handle" />
+      <input id="username" type="text" value="<%=username%>" placeholder="Username" disabled />
       <input id="message" type="text" placeholder="Message" />
       <button id="send">Send</button>
     </div>
