--- a/views/pages/chat.ejs
+++ b/views/pages/chat.ejs
@@ -4,12 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chat</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.5.1/socket.io.js"></script>
-    <link rel="stylesheet" href="/styles/styles-chat.css" />
+    <title>Food Rescue</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="/styles/style-chat.css" />
   </head>
   <body>
-    <div id="mario-chat">
+    <%- include('../partials/nav'); %>
+
+    <div id="chat">
       <div id="chat-window">
         <div id="output"></div>
         <div id="feedback"></div>
@@ -18,6 +26,7 @@
       <input id="message" type="text" placeholder="Message" />
       <button id="send">Send</button>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.5.1/socket.io.js"></script>
     <script src="/scripts/chat.js"></script>
   </body>
 </html>
