--- a/public/styles/style-chat.css
+++ b/public/styles/style-chat.css
@@ -8,7 +8,7 @@ h2 {
   color: #575ed8;
 }
 
-#mario-chat {
+#chat {
   max-width: 600px;
   margin: 30px auto;
   border: 1px solid #ddd;
@@ -58,7 +58,7 @@ input {
   font-size: 16px;
 }
 
-button {
+#send {
   background: #575ed8;
   color: #fff;
   font-size: 18px;
