--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -23,7 +23,7 @@
           <a class="nav-link" href="/listings">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="">Chats</a>
+          <a class="nav-link" href="/chat">Chats</a>
         </li>
 
         <li class="nav-item">
