--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -5,7 +5,7 @@
     <div class="constrained-full-height" id="page-login">
       <div class="container">
         <div class="text-center pt-5">
-          <img src="/assets/logo.png" alt="" /><br /><br />
+          <img id="logo" src="/assets/logo.png" alt="" /><br /><br />
           <h1>Welcome to Food Rescue!</h1>
         </div>
 
