--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,8 +1,9 @@
-<nav id="nav-bar" class="navbar navbar-expand-lg bg-light">
+<nav id="nav-bar" class="navbar navbar-expand-lg navbar-custom">
   <div class="container">
     <figure class="mr-3">
-      <!-- <img src="/img/logo.png" srcset="/img/logo.png 1x, /img/logo@2x.png 2x" /> -->
-      <figcaption><a class="navbar-brand" href="#">Food Rescue</a></figcaption>
+      <img src="" alt="" />
+      <img id="logo-small" src="/assets/logo.png" alt="" />
+      <!-- <figcaption><a class="navbar-brand" href="#">Food Rescue</a></figcaption> -->
     </figure>
 
     <button
@@ -29,9 +30,10 @@
         <li class="nav-item">
           <a class="nav-link" href="/users">Profile</a>
         </li>
+
         <li class="nav-item">
           <form method="POST" action="/logout?_method=DELETE">
-            <button type="submit" class="nav-link">Log out</button>
+            <button id="logout-button" type="submit" class="nav-link">Log out</button>
           </form>
         </li>
       </ul>
