--- a/public/styles/style-chat.css
+++ b/public/styles/style-chat.css
@@ -4,8 +4,13 @@ h2 {
   color: #575ed8;
 }
 
+#info-box {
+  margin: 30px 0;
+}
+
 #chat {
   max-width: 600px;
+  width: 100%;
   margin: 30px auto;
   border: 1px solid #ddd;
   box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.05);
@@ -21,8 +26,21 @@ h2 {
 #output p {
   padding: 14px 0px;
   margin: 0 20px;
+}
+
+#chat-date {
+  padding: 0;
+  text-align: right;
+  font-style: italic;
+  font-size: 0.8em;
+
+  /* padding-top: 14px; */
+}
+
+#chat-message {
   border-bottom: 1px solid #e9e9e9;
   color: #555;
+  /* padding-bottom: 14px; */
 }
 
 #feedback p {
@@ -62,4 +80,8 @@ input {
   padding: 12px 0;
   width: 100%;
   border-radius: 0 0 2px 2px;
+}
+
+#in-chat-users li {
+  color: red;
 }
