--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -24,7 +24,7 @@
           <a class="nav-link" href="/listings">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/chat">Chats</a>
+          <a class="nav-link" href="/chats">Chats</a>
         </li>
 
         <li class="nav-item">
