--- a/views/pages/chat.ejs
+++ b/views/pages/chat.ejs
@@ -22,8 +22,8 @@
           <h3>In chat users</h3>
           <ul id="in-chat-users"></ul>
 
-          <h3>Activity Log</h3>
-          <ul id="online-users"></ul>
+          <h3 style="display: none">Activity Log</h3>
+          <ul style="display: none" id="online-users"></ul>
         </div>
 
         <div id="chat">
