fixed profile page bug

--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -39,9 +39,9 @@
           <div class="mb-3 justify-center">
             <label for="status" class="form-label ps-0">Status</label>
             <select name="status" id="statusOptions">
-              <option value="available">Available</option>
-              <option value="reserved">Reserved</option>
-              <option value="taken">Taken</option>
+              <option class="<%=statusForm["available"]%>"value="available">Available</option>
+              <option class="<%=statusForm["reserved"]%>"value="reserved">Reserved</option>
+              <option class="<%=statusForm["taken"]%>"value="taken">Taken</option>
             </select>
           </div>
 
