--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -5,9 +5,9 @@ body {
   background-color: rgb(192, 236, 255);
 }
 
-#error-msgs {
+/* #error-msgs {
   background-color: beige;
-}
+} */
 
 #page-index-listings {
   background-color: white;
