--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -4,7 +4,7 @@
   <body>
     <%- include('../partials/nav'); %>
 
-    <div class="constrained-full-height" id="page-index-listings">
+    <div class="constrained-full-height" id="page-show-listings">
       <div class="container pt-5">
         <!-- Listing name -->
         <%- include('../partials/errors'); %> <%if(listing){%>
