--- a/views/pages/unauthorized.ejs
+++ b/views/pages/unauthorized.ejs
@@ -4,7 +4,7 @@
   <body>
     <%- include('../partials/nav'); %>
 
-    <div class="constrained-full-height" id="page-index-listings">
+    <div class="constrained-full-height" id="page-unauthorized">
       <div class="container">
         <h3>You are not authorised to access this page.</h3>
       </div>
