--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -107,7 +107,7 @@
             <h5>
               Posted by
               <a href="/users/<%=listing.user.username%>"><%=listing.user.username%></a> on
-              <%=listing.date_posted.toLocaleString()%>
+              <%=listing.date_posted.toLocaleString("en-GB")%>
             </h5>
             <div class="d-flex">
               <img class="index-listing-img" src="<%=listing.listing_image_url%>" alt="" />
