--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -15,7 +15,7 @@
           <h5 class="status"><%=listing.status%></h5>
           <h5>
             Posted by <a href="/users/<%=listing.user.username%>"><%=listing.user.username%></a> on
-            <%=listing.date_posted.toLocaleString()%>
+            <%=listing.date_posted.toLocaleString("en-GB")%>
           </h5>
           <div class="d-flex">
             <img class="show-listing-img" src="<%=listing.listing_image_url%>" alt="" />
