--- a/views/pages/chat.ejs
+++ b/views/pages/chat.ejs
@@ -13,6 +13,9 @@
     />
     <link rel="stylesheet" href="/styles/style.css" />
     <link rel="stylesheet" href="/styles/style-chat.css" />
+    <script>
+      const chatId = "<%=chatId%>";
+    </script>
   </head>
   <body>
     <%- include('../partials/nav'); %>
