linking of chat index and show

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -9,7 +9,8 @@ body {
   background-color: beige;
 } */
 
-#page-index-listings {
+#page-index-listings,
+#page-index-chats {
   background-color: white;
 }
 
@@ -88,6 +89,12 @@ footer p {
 .listing {
   padding: 0.5em;
   background-color: lightskyblue;
+  border-radius: 20px;
+}
+
+.chat {
+  padding: 0.5em;
+  background-color: lightpink;
   border-radius: 20px;
 }
 
