--- a/views/chats/show.ejs
+++ b/views/chats/show.ejs
@@ -20,32 +20,27 @@
   <body>
     <%- include('../partials/nav'); %>
     <div class="container">
-      <div class="d-flex">
-        <div id="info-box">
-          <h3>In chat users</h3>
-          <ul id="in-chat-users"></ul>
-
-          <h3 style="display: none">Activity Log</h3>
-          <ul style="display: none" id="online-users"></ul>
-        </div>
-
-        <div id="chat">
-          <div id="chat-window">
-            <div id="output"></div>
-            <div id="feedback"></div>
-          </div>
-          <input
-            type="hidden"
-            id="username"
-            type="text"
-            value="<%=username%>"
-            placeholder="Username"
-            disabled
-          />
-          <input id="message" type="text" placeholder="Message" required />
-          <button id="send">Send</button>
-        </div>
+      <!-- <div class="d-flex"> -->
+      <div id="listing-details">
+        <h1>Chat with <%=listing_owner_user%> for <%=listing_name%></h1>
       </div>
+      <div id="chat">
+        <div id="chat-window">
+          <div id="output"></div>
+          <div id="feedback"></div>
+        </div>
+        <input
+          type="hidden"
+          id="username"
+          type="text"
+          value="<%=username%>"
+          placeholder="Username"
+          disabled
+        />
+        <input id="message" type="text" placeholder="Message" required />
+        <button id="send">Send</button>
+      </div>
+      <!-- </div> -->
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.5.1/socket.io.js"></script>
