fix bug in edit listing so that unchanged images are not deleted in cloudinary

--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -102,7 +102,7 @@
               required
             />
           </div>
-          <input type="hidden" name="referer" value="<%=referer%>" />
+          <!-- <input type="hidden" name="referer" value="<%#referer%>" /> -->
           <div class="mb-3 text-center">
             <input type="submit" value="Upload Listing" class="btn btn-primary" /><br /><br />
           </div>
