--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -34,7 +34,7 @@
                   style="display: inline-block"
                   action="/listings/<%= listing._id %>?_method=DELETE"
                 >
-                  <input type="hidden" name="referer" value="<%=referer%>" />
+                  <!-- <input type="hidden" name="referer" value="<%#referer%>" /> -->
                   <button type="submit" class="btn btn-danger">Delete Listing</button>
                 </form>
               </div>
